--- a/Campeonato_App/Campeonato_App.Android/Campeonato_App.Android.csproj
+++ b/Campeonato_App/Campeonato_App.Android/Campeonato_App.Android.csproj
@@ -85,7 +85,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Campeonato_App\Campeonato_App.csproj">
       <Project>{D42D01AB-845D-4D85-91C0-0DC7E2866DED}</Project>
@@ -93,10 +92,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\baseline_search_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable\baseline_clear_black_18dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\baseline_clear_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable\baseline_close_black_48dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fifa_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\WS_Towers.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\app_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
